--- a/BackMatter/Conclusions.tex
+++ b/BackMatter/Conclusions.tex
@@ -2,6 +2,21 @@
 
 \qquad 
 
+%- Hablar de manera general del aumento del desarrollo en la ia
+%- Hablar de las soluciones de AutoML, y luego de las soluciones de meta-learning
+%- Hablar de lo que le faltan a las soluciones de meta-learning implementadas (como en las conclusiones de background)
+%- Hablar luego de las características de la solución (como está en la introducción de propuesta)
+%- Hablar de los resultados obtenidos en la experimentación
 
+La inteligencia artificial, y en particular el aprendizaje automático, es cada vez más demandado en la industria, debido al potencial que tiene para automatizar los procesos más complejos. Las organizaciones están repletas de datos, pero carecen de personas con la experiencia técnica necesaria para transformar estos datos en conocimientos prácticos~\cite{miller2017quant}. Entre las principales dificultades para aplicar extensivamente técnicas de aprendizaje automático en problemas reales, están la poca disponibilidad de expertos unido al costo de diseñar, implementar y evaluar este tipo de soluciones. 
+
+Con el objetivo de liberar a los expertos de las tareas menos creativas en la implementación de sistemas de aprendizaje automático, las organizaciones se están volcando cada vez más hacia la automatización en el trabajo de ciencia de datos, comenzando con la adopción de técnicas que automatizan la creación de modelos de aprendizaje automático~\cite{drozdal2020trust, wang2019humanai}. Sin embargo, la adopción de esta tecnología en entornos empresariales no ha sido perfecta. Actualmente, las herramientas de AutoML tienen restricciones respecto a lo que pueden realizar de manera flexible~\cite{crisan2021fits}. %Los sistemas de extremo a extremo que abarcan todo el espectro del trabajo de la ciencia de datos, desde la preparación de los datos hasta la comunicación, aún no se han realizado por completo~\cite{lee2019AHP, zoller2019surver}.
+
+Una de las limitaciones presente en los primeros sistemas de AutoML consiste en su inhabilidad de rehusar conocimiento previo para solucionar nuevas tareas. Para cerrar esta brecha, las herramientas de AutoML comenzaron a aplicar técnicas de meta-learning, las cuales tienen el objetivo de obtener modelos para nuevas tareas usando experiencias previas. Este tipo de estrategias ayudan a disminuir el costo de aplicar AutoML, al relacionar un nuevo conjunto de datos con los mejores flujos obtenidos en problemas similares previamente resueltos. 
+
+\section{Trabajos Futuros}
+
+- Hablar de la necesidad de abarcar más tipos de problemas. 
+- 
 
 \end{conclusions}
