--- a/Thesis.tex
+++ b/Thesis.tex
@@ -14,6 +14,7 @@
 \usepackage{xcite}
 \floatstyle{plaintop}
 \restylefloat{table}
+\usepackage{graphicx}
 
 %\newtheorem{definition}{Definition}[section]
 
