--- a/references.bib
+++ b/references.bib
@@ -1252,3 +1252,123 @@ isbn="978-3-642-59789-3"
   biburl    = {https://dblp.org/rec/journals/corr/ChenG16.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{miller2017quant,
+  title={The quant crunch: How the demand for data science skills is disrupting the job market},
+  author={Miller, Steven and Hughes, Debbie},
+  journal={Burning Glass Technologies},
+  year={2017},
+  url={https://www.ibm.com/downloads/cas/3RL3VXGA}
+}
+
+@inproceedings{drozdal2020trust,
+author = {Drozdal, Jaimie and Weisz, Justin and Wang, Dakuo and Dass, Gaurav and Yao, Bingsheng and Zhao, Changruo and Muller, Michael and Ju, Lin and Su, Hui},
+title = {Trust in AutoML: Exploring Information Needs for Establishing Trust in Automated Machine Learning Systems},
+year = {2020},
+isbn = {9781450371186},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3377325.3377501},
+doi = {10.1145/3377325.3377501},
+abstract = {We explore trust in a relatively new area of data science: Automated Machine Learning
+(AutoML). In AutoML, AI methods are used to generate and optimize machine learning
+models by automatically engineering features, selecting models, and optimizing hyperparameters.
+In this paper, we seek to understand what kinds of information influence data scientists'
+trust in the models produced by AutoML? We operationalize trust as a willingness to
+deploy a model produced using automated methods. We report results from three studies
+- qualitative interviews, a controlled experiment, and a card-sorting task - to understand
+the information needs of data scientists for establishing trust in AutoML systems.
+We find that including transparency features in an AutoML tool increased user trust
+and understandability in the tool; and out of all proposed features, model performance
+metrics and visualizations are the most important information to data scientists when
+establishing their trust with an AutoML tool.},
+booktitle = {Proceedings of the 25th International Conference on Intelligent User Interfaces},
+pages = {297–307},
+numpages = {11},
+keywords = {automated machine learning, automated data science, AutoDS, trust, AutoML, automated artificial intelligence, AutoAI},
+location = {Cagliari, Italy},
+series = {IUI '20}
+}
+
+@article{wang2019humanai,
+author = {Wang, Dakuo and Weisz, Justin D. and Muller, Michael and Ram, Parikshit and Geyer, Werner and Dugan, Casey and Tausczik, Yla and Samulowitz, Horst and Gray, Alexander},
+title = {Human-AI Collaboration in Data Science: Exploring Data Scientists' Perceptions of Automated AI},
+year = {2019},
+issue_date = {November 2019},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {3},
+number = {CSCW},
+url = {https://doi.org/10.1145/3359313},
+doi = {10.1145/3359313},
+abstract = {The rapid advancement of artificial intelligence (AI) is changing our lives in many
+ways. One application domain is data science. New techniques in automating the creation
+of AI, known as AutoAI or AutoML, aim to automate the work practices of data scientists.
+AutoAI systems are capable of autonomously ingesting and pre-processing data, engineering
+new features, and creating and scoring models based on a target objectives (e.g. accuracy
+or run-time efficiency). Though not yet widely adopted, we are interested in understanding
+how AutoAI will impact the practice of data science. We conducted interviews with
+20 data scientists who work at a large, multinational technology company and practice
+data science in various business settings. Our goal is to understand their current
+work practices and how these practices might change with AutoAI. Reactions were mixed:
+while informants expressed concerns about the trend of automating their jobs, they
+also strongly felt it was inevitable. Despite these concerns, they remained optimistic
+about their future job security due to a view that the future of data science work
+will be a collaboration between humans and AI systems, in which both automation and
+human expertise are indispensable.},
+journal = {Proc. ACM Hum.-Comput. Interact.},
+month = nov,
+articleno = {211},
+numpages = {24},
+keywords = {autoai, human-in-the-loop ai, data science, domain experts, human-centered ai, automl, ai design ai, machine learning, data scientist, human-ai collaboration, future of work, automation}
+}
+
+@inbook{crisan2021fits,
+author = {Crisan, Anamaria and Fiore-Gartland, Brittany},
+title = {Fits and Starts: Enterprise Use of AutoML and the Role of Humans in the Loop},
+year = {2021},
+isbn = {9781450380966},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3411764.3445775},
+abstract = { AutoML systems can speed up routine data science work and make machine learning available
+to those without expertise in statistics and computer science. These systems have
+gained traction in enterprise settings where pools of skilled data workers are limited.
+In this study, we conduct interviews with 29 individuals from organizations of different
+sizes to characterize how they currently use, or intend to use, AutoML systems in
+their data science work. Our investigation also captures how data visualization is
+used in conjunction with AutoML systems. Our findings identify three usage scenarios
+for AutoML that resulted in a framework summarizing the level of automation desired
+by data workers with different levels of expertise. We surfaced the tension between
+speed and human oversight and found that data visualization can do a poor job balancing
+the two. Our findings have implications for the design and implementation of human-in-the-loop
+visual analytics approaches.},
+booktitle = {Proceedings of the 2021 CHI Conference on Human Factors in Computing Systems},
+articleno = {601},
+numpages = {15}
+}
+
+@article{lee2019AHP,
+  title={A Human-in-the-loop Perspective on AutoML: Milestones and the Road Ahead},
+  author={Doris Jung Lin Lee and Stephen Macke and Doris Xin and Angela Lee and Silu Huang and Aditya G. Parameswaran},
+  journal={IEEE Data Eng. Bull.},
+  year={2019},
+  volume={42},
+  url={http: //sites.computer.org/debull/A19june/p59.pdf},
+  pages={59-70}
+}
+
+@article{zoller2019surver,
+  author    = {Marc{-}Andr{\'{e}} Z{\"{o}}ller and
+               Marco F. Huber},
+  title     = {Survey on Automated Machine Learning},
+  journal   = {CoRR},
+  volume    = {abs/1904.12054},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1904.12054},
+  eprinttype = {arXiv},
+  eprint    = {1904.12054},
+  timestamp = {Thu, 02 May 2019 15:13:44 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1904-12054.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
