--- a/MainMatter/Background.tex
+++ b/MainMatter/Background.tex
@@ -925,7 +925,12 @@ Los modelos sustitutos también han sido usados en los sistemas de AutoML como t
 
 \section{Conclusión}\label{sec:conclusion}
 
-Cada vez que intentamos aprender una determinada tarea, no importa si es exitosa o no, ganamos experiencia útil que puede ser utilizada para aprender nuevas tareas. No deberíamos nunca que tener que empezar totalmente desde el principio. Deberíamos sistemáticamente coleccionar nuevas tareas y aprender de ellas para construir sistemas de AutoML que mejoran continuamente con el tiempo, ayudándonos a abordar nuevos problemas más eficientemente. Mientras más tareas encontremos, y mientras más similares sean, más experiencia pasada podemos aprovechar, hasta el punto de que casi todo el conocimiento requerido ya ha sido realizado de antemano. La habilidad de los sistemas de computación de guardar virtualmente grandes cantidades de experiencias pasadas de aprendizaje (en forma de meta-datos) abre una gran cantidad de oportunidades de usar esa experiencia en maneras completamente diferentes, y apenas estamos empezando a aprender a aprender de la experiencia pasada efectivamente \cite{vanschoren2018metalearning}. Este capítulo realiza un estudio de los campos y técnicas más importantes para la construcción de sistemas de AutoML que aprenden continuamente de experiencias pasadas.
+La democratización de la Inteligencia Artificial es una de las preocupaciones fundamentales, tanto de la comunidad científica como de los expertos de la industria. El campo del AutoML se presenta como una alternativa prometedora para disminuir substancialmente el esfuerzo que conlleva la aplicación de técnicas de inteligencia artificial, y específicamente de aprendizaje automático, a problemas concretos. Por otro lado, el campo de meta-learning aplicado a AutoML permite permite rehusar conocimiento previo para solucionar nuevas tareas. Este tipo de estrategias ayudan a disminuir el costo de aplicar AutoML, al relacionar un nuevo conjunto de datos con los mejores flujos obtenidos en problemas similares previamente resueltos. La habilidad de los sistemas de computación de guardar virtualmente grandes cantidades de experiencias pasadas de aprendizaje (en forma de meta-datos) abre una gran cantidad de oportunidades de usar esa experiencia en maneras completamente diferentes, y apenas estamos empezando a aprender a aprender de la experiencia pasada efectivamente \cite{vanschoren2018metalearning}.
+
+Aunque existen varias herramientas de meta-learning que han sido exitosas al aplicarse a AutoML resolviendo problemas específicos de inteligencia artificial, estas herramientas son aún demasiado rígidas para ser utilizadas en problemas prácticos que requieren la combinación de algoritmos y tecnologías de diferente naturaleza. 
+
+
+Cada vez que intentamos aprender una determinada tarea, no importa si es exitosa o no, ganamos experiencia útil que puede ser utilizada para aprender nuevas tareas. No deberíamos nunca que tener que empezar totalmente desde el principio. Deberíamos sistemáticamente coleccionar nuevas tareas y aprender de ellas para construir sistemas de AutoML que mejoran continuamente con el tiempo, ayudándonos a abordar nuevos problemas más eficientemente. Mientras más tareas encontremos, y mientras más similares sean, más experiencia pasada podemos aprovechar, hasta el punto de que casi todo el conocimiento requerido ya ha sido realizado de antemano. . Este capítulo realiza un estudio de los campos y técnicas más importantes para la construcción de sistemas de AutoML que aprenden continuamente de experiencias pasadas.
 
 %\\ \\
 %Las matrices $\widetilde{M}_{n}$, $L$, $r$ est\'{a}n definidas como en el esquema anterior.\\
